--- a/cascade.css
+++ b/cascade.css
@@ -7,6 +7,8 @@
 
 html, body {
   height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  user-select: none;
 }
 
 .container {
@@ -33,6 +35,15 @@ html, body {
   height: 100%;
 }
 
+.logo-top {
+  height: 100px;
+}
+
+.logo-bottom {
+  margin-top: 15px;
+  max-width: 150px;
+}
+
 .opacity {
   position: absolute;
   width: 100%;
@@ -40,4 +51,39 @@ html, body {
   top:0;
   left: 0;
   background: #FFFFFF60;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+}
+.title {
+  color: #9b3778;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.line {
+  width: 100%;
+  background: #ffffff80;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #5d1d33 ;
+  margin-bottom: 5px;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+.service {
+  white-space: nowrap;
 }
