--- a/cascade.css
+++ b/cascade.css
@@ -40,7 +40,7 @@ html, body {
 }
 
 .logo-bottom {
-  margin-top: 15px;
+  margin-top: 0.1vh;
   max-width: 150px;
 }
 
@@ -64,10 +64,11 @@ html, body {
 }
 .title {
   color: #9b3778;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin-bottom: 0.1vh;
+  margin-top: 0.1vh;
   font-weight: 600;
   text-align: center;
+  font-size: 0.8em;
 }
 
 .line {
@@ -81,7 +82,7 @@ html, body {
   color: #5d1d33 ;
   margin-bottom: 5px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.6em;
 }
 
 .service {
