--- a/cascade.css
+++ b/cascade.css
@@ -36,12 +36,13 @@ html, body {
 }
 
 .logo-top {
-  height: 100px;
+  height: 10vh;
+  margin-bottom: 1vh;
 }
 
 .logo-bottom {
   margin-top: 0.1vh;
-  max-width: 150px;
+  max-width: 8vw;
 }
 
 .opacity {
